force-app/main/default/objects/Program__c/fields/DetailEvent__c.field-meta.xml
<CustomField>
    <fullName>DetailEvent__c</fullName>
    <label>Detail Event</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>