force-app/main/default/objects/Program__c/fields/Late_Registration_Form_Url__c.field-meta.xml
<CustomField>
    <fullName>Late_Registration_Form_Url__c</fullName>
    <formula>&quot;https://votfund.formtitan.com/ftproject/children_camp?p1d=&quot;+ Id +&quot;&amp;late_reg=true&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Late Registration Form Url</label>
    <type>Text</type>
</CustomField>