force-app/main/default/objects/Program__c/fields/Max_Num_Of_Participants__c.field-meta.xml
<CustomField>
    <fullName>Max_Num_Of_Participants__c</fullName>
    <label>Max Num Of Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>