force-app/main/default/objects/Program__c/fields/Num_of_Participations_Arrived__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Participations_Arrived__c</fullName>
    <label>Num of Participations Arrived</label>
    <summaryFilterItems>
        <field>Program_Participation__c.ParticipationStatus__c</field>
        <operation>equals</operation>
        <value>Arrived</value>
    </summaryFilterItems>
    <summaryForeignKey>Program_Participation__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>