force-app/main/default/objects/Program__c/fields/Num_of_Registered__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Registered__c</fullName>
    <description>סופר את כל רשומות המשתתפים שבסטטוס Registered</description>
    <inlineHelpText>סופר את כל רשומות המשתתפים שבסטטוס Registered</inlineHelpText>
    <label>Num of Registered</label>
    <summaryFilterItems>
        <field>Program_Participation__c.ParticipationStatus__c</field>
        <operation>equals</operation>
        <value>Registered</value>
    </summaryFilterItems>
    <summaryForeignKey>Program_Participation__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>