force-app/main/default/objects/Program__c/fields/Number_of_participants__c.field-meta.xml
<CustomField>
    <fullName>Number_of_participants__c</fullName>
    <label>Number of participants</label>
    <summarizedField>Fees__c.Number_of_participations__c</summarizedField>
    <summaryFilterItems>
        <field>Fees__c.Payment_Status__c</field>
        <operation>notEqual</operation>
        <value>Error</value>
    </summaryFilterItems>
    <summaryForeignKey>Fees__c.Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>