force-app/main/default/objects/Program__c/fields/NumMaxOfParticipants__c.field-meta.xml
<CustomField>
    <fullName>NumMaxOfParticipants__c</fullName>
    <label>Num Max of participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>