force-app/main/default/objects/Program__c/fields/PaidProgram__c.field-meta.xml
<CustomField>
    <fullName>PaidProgram__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paid Program</label>
    <type>Checkbox</type>
</CustomField>