force-app/main/default/objects/Program__c/fields/ParticipationAmount__c.field-meta.xml
<CustomField>
    <fullName>ParticipationAmount__c</fullName>
    <label>Participation Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>