force-app/main/default/objects/Program__c/fields/Places_left_for_registration__c.field-meta.xml
<CustomField>
    <fullName>Places_left_for_registration__c</fullName>
    <formula>if(isblank( Max_Num_Of_Participants__c ),null,Max_Num_Of_Participants__c - Total_of_Participations__c )</formula>
    <label>Places left for registration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>