force-app/main/default/objects/Program__c/fields/ProgramPlace__c.field-meta.xml
<CustomField>
    <fullName>ProgramPlace__c</fullName>
    <label>Program Place</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>