force-app/main/default/objects/Program__c/fields/ProgramStatus__c.field-meta.xml
<CustomField>
    <fullName>ProgramStatus__c</fullName>
    <label>Program Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In preparation</fullName>
                <default>true</default>
                <label>In preparation</label>
            </value>
            <value>
                <fullName>Registration Closed</fullName>
            </value>
            <value>
                <fullName>Ended</fullName>
            </value>
            <value>
                <fullName>Internal Registration</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Open for registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>