force-app/main/default/objects/Program__c/fields/ProgramType__c.field-meta.xml
<CustomField>
    <fullName>ProgramType__c</fullName>
    <label>Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Keytana</fullName>
            </value>
            <value>
                <fullName>Merchav</fullName>
                <label>Family Circle</label>
            </value>
            <value>
                <fullName>Mega events</fullName>
            </value>
            <value>
                <fullName>Cross-Sectional Programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>