force-app/main/default/objects/Program__c/fields/Registration_Closed_Message__c.field-meta.xml
<CustomField>
    <fullName>Registration_Closed_Message__c</fullName>
    <inlineHelpText>במידה והתכנית היא מסוג קייטנה וההרשמה אינה פתוחה הטקסט בשדה זה יופיע בהודעה קופצת בקישור לטופס ההרשמה</inlineHelpText>
    <label>Registration Closed Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>