force-app/main/default/objects/Program__c/fields/Registration_Form_Url__c.field-meta.xml
<CustomField>
    <fullName>Registration_Form_Url__c</fullName>
    <formula>case(text( ProgramType__c ),
&quot;Keytana&quot;,&quot;https://votfund.formtitan.com/ftproject/children_camp?p1d=&quot;+ Id ,
null)</formula>
    <label>Registration Form Url</label>
    <type>Text</type>
</CustomField>