force-app/main/default/objects/Program__c/fields/Target_Audiance__c.field-meta.xml
<CustomField>
    <fullName>Target_Audiance__c</fullName>
    <label>Target Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Households</fullName>
            </value>
            <value>
                <fullName>Family Members</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>