force-app/main/default/objects/Program__c/fields/Target_Audience_Hebrew__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Hebrew__c</fullName>
    <formula>case(text( Target_Audiance__c ),
&quot;Family Members&quot;,&quot;פעילות פרטנית&quot;,
&quot;Households&quot;,&quot;פעילות משפחתית&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Audience Hebrew</label>
    <type>Text</type>
</CustomField>