force-app/main/default/objects/Program__c/fields/Total_Amount_Pending_Payment__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Pending_Payment__c</fullName>
    <label>Total Amount Pending Payment</label>
    <summarizedField>Fees__c.Amount_Balance__c</summarizedField>
    <summaryFilterItems>
        <field>Fees__c.Payment_Status__c</field>
        <operation>equals</operation>
        <value>Waiting for payment</value>
    </summaryFilterItems>
    <summaryForeignKey>Fees__c.Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>