force-app/main/default/objects/Program__c/fields/Total_of_Participations__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Participations__c</fullName>
    <inlineHelpText>סופר את כל רשומות המשתתפים שאינם בסטטוס ביטל או לא הגיע</inlineHelpText>
    <label>Total of Participations</label>
    <summaryFilterItems>
        <field>Program_Participation__c.ParticipationStatus__c</field>
        <operation>notEqual</operation>
        <value>Not Show up, Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Program_Participation__c.Program__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>