force-app/main/default/objects/Program__c/validationRules/Valid_ages_for_keytana.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_ages_for_keytana</fullName>
    <active>true</active>
    <errorConditionFormula>Max_Age__c &lt; Min_Age__c</errorConditionFormula>
    <errorMessage>גיל מנימלי לא יכול להיות גדול יותר מהגיל המקסימלי</errorMessage>
</ValidationRule>