force-app/main/default/objects/Program__c/listViews/Keytana.listView-meta.xml
<ListView>
    <fullName>Keytana</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProgramStatus__c</field>
        <operation>equals</operation>
        <value>Active,Registration Closed,In preparation,Open for registration</value>
    </filters>
    <filters>
        <field>ProgramType__c</field>
        <operation>equals</operation>
        <value>Keytana</value>
    </filters>
    <label>תכניות קייטנות</label>
</ListView>