force-app/main/default/objects/Program__c/listViews/Maagal2.listView-meta.xml
<ListView>
    <fullName>Maagal2</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProgramStatus__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>ProgramType__c</field>
        <operation>equals</operation>
        <value>Merchav</value>
    </filters>
    <label>תכניות מעגל משפחתי</label>
</ListView>