force-app/main/default/objects/Program__c/listViews/View.listView-meta.xml
<ListView>
    <fullName>View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProgramStatus__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>ProgramType__c</field>
        <operation>equals</operation>
        <value>Cross-Sectional Programs</value>
    </filters>
    <label>תכניות רוחביות</label>
</ListView>