force-app/main/default/objects/Program__c/listViews/Yom2.listView-meta.xml
<ListView>
    <fullName>Yom2</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProgramStatus__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>ProgramType__c</field>
        <operation>equals</operation>
        <value>Mega events</value>
    </filters>
    <label>תכניות ימי שיא</label>
</ListView>